- B2_1: Flyway migrations V3/V4/V5 (categories, products, product_images, reviews) - B2_2: Category entity, repository, service, controller (public GET, admin CRUD) - B2_3: Product entity, repository, service, controller with pagination and filtering - B2_3: ProductSpecification with dynamic filters (type, category, price, search) - B2_4: Review entity, moderation workflow (PENDING/APPROVED/REJECTED) - B2_5: Cloudinary config bean, DELETE /api/products/{id}/images/{imageId} - Tests: CategoryServiceImplTest, ProductServiceImplTest, ReviewServiceImplTest"